# wasm-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml  cli.html  design-system.html  docs.html  http.html  landing.html  schema.sql  wasm.lock.toml  wasm.toml
.config/: nextest.toml
.config/impeccable/: .impeccable.md
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/skills/code-quality/: SKILL.md
.github/workflows/: auto-label.md  ci.yaml  coverage.yaml  publish.yml  release-bump.yml  release-fork.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  util.rs
crates/cli/tests/: test.rs
crates/manifest/src/: lib.rs  lockfile.rs  manifest.rs  validation.rs
crates/meta-registry/: Cargo.toml  README.md
crates/package-manager/: Cargo.toml
crates/package-manager/src/: config.rs  credential_helper.rs  lib.rs  progress.rs  utils.rs
crates/package-manager/src/manager/: mod.rs
crates/package-manager/src/network/: client.rs  mod.rs  registry_client.rs
crates/package-manager/src/storage/: mod.rs  schema.sql  store.rs
crates/package-manager/src/storage/migrations/: 01_init.sql  08_image_unique.sql  09_wit_interface_unique.sql  10_package_type.sql  11_sync_meta.sql
crates/package-manager/src/storage/models/: image_entry.rs  known_package.rs  migration.rs  oci.rs  wit_interface.rs
crates/wasm-cli/: Cargo.toml
crates/wasm-cli-internal-run/: Cargo.toml
crates/wasm-cli-internal-run/src/: errors.rs  lib.rs
crates/wasm-cli/src/: main.rs  util.rs
crates/wasm-cli/src/add/: mod.rs
crates/wasm-cli/src/compose/: errors.rs  mod.rs  resolver.rs
crates/wasm-cli/src/init/: mod.rs
crates/wasm-cli/src/install/: errors.rs  mod.rs  progress_bar.rs
crates/wasm-cli/src/local/: mod.rs
crates/wasm-cli/src/package/: mod.rs  search.rs
crates/wasm-cli/src/registry/: errors.rs  inspect.rs  mod.rs  search.rs  sync.rs
crates/wasm-cli/src/run/: errors.rs  http.rs  mod.rs
crates/wasm-cli/src/self_/: mod.rs
crates/wasm-cli/src/tui/: app.rs  mod.rs
crates/wasm-cli/src/tui/views/: interfaces.rs  known_package_detail.rs  log.rs  mod.rs  package_detail.rs  packages.rs  search.rs  settings.rs  types.rs
crates/wasm-cli/tests/: snapshot.rs  test.rs
crates/wasm-cli/tests/snapshots/: snapshot__log_view_empty_snapshot.snap  snapshot__log_view_scrolled_snapshot.snap  snapshot__log_view_with_lines_snapshot.snap  snapshot__settings_view_with_state_info_snapshot.snap  snapshot__types_view_snapshot.snap  test__add_help_snapshot.snap  test__cli_compose_help_snapshot.snap  test__cli_inspect_help_snapshot.snap  test__cli_local_clean_help_snapshot.snap  test__cli_local_help_snapshot.snap  test__cli_local_list_help_snapshot.snap  test__cli_main_help_snapshot.snap  test__cli_registry_delete_help_snapshot.snap  test__cli_registry_help_snapshot.snap  test__cli_registry_inspect_help_snapshot.snap  test__cli_registry_known_help_snapshot.snap  test__cli_registry_list_help_snapshot.snap  test__cli_registry_pull_help_snapshot.snap  test__cli_registry_search_help_snapshot.snap  test__cli_registry_sync_help_snapshot.snap  test__cli_registry_tags_help_snapshot.snap  test__cli_run_help_snapshot.snap  test__cli_self_clean_help_snapshot.snap  test__cli_self_help_snapshot.snap  test__cli_self_log_help_snapshot.snap  test__cli_self_state_help_snapshot.snap  test__init_help_snapshot.snap  test__install_help_snapshot.snap  test__install_without_init.snap  test__run_core_module_rejected.snap  test__run_missing_file.snap
crates/wasm-detector/: Cargo.toml  README.md
crates/wasm-detector/src/: lib.rs
crates/wasm-frontend/: Cargo.toml
crates/wasm-frontend/src/: api_client.rs  footer.rs  layout.rs  lib.rs  nav.rs  reserved.rs
crates/wasm-frontend/src/pages/: about.rs  all.rs  child_component.rs  docs.rs  downloads.rs  engines.rs  error.rs  home.rs  interface.rs  item.rs  mod.rs  namespace.rs  not_found.rs  package.rs  package_shell.rs  search.rs  sidebar.rs  world.rs
crates/wasm-frontend/src/wit_doc/: mod.rs
crates/wasm-meta-registry/: Cargo.toml  README.md
crates/wasm-meta-registry-client/: Cargo.toml  README.md
crates/wasm-meta-registry-client/src/: api_client.rs  client.rs  lib.rs
crates/wasm-meta-registry-types/: Cargo.toml  README.md
crates/wasm-package-manager/: Cargo.toml
crates/wasm-package-manager/src/: config.rs  credential_helper.rs  lib.rs  resolver.rs  xdg.rs
crates/wasm-package-manager/src/components/: mod.rs  models.rs
crates/wasm-package-manager/src/compose/: errors.rs
crates/wasm-package-manager/src/interfaces/: mod.rs  parser.rs  worlds.rs
crates/wasm-package-manager/src/manager/: errors.rs  logic.rs  mod.rs
crates/wasm-package-manager/src/manager/install/: errors.rs  mod.rs
crates/wasm-package-manager/src/oci/: client.rs  errors.rs  logic.rs  mod.rs  raw.rs
crates/wasm-package-manager/src/oci/models/: mod.rs  repository.rs
crates/wasm-package-manager/src/storage/: config.rs  known_package.rs  mod.rs  schema.sql  store.rs  views.rs
crates/wasm-package-manager/src/storage/migrations/: 04_add_kind_to_oci_repository.sql
crates/wasm-package-manager/src/storage/models/: image_entry.rs  known_package.rs  migration.rs  mod.rs  oci.rs  raw_known_package.rs  wit_interface.rs
crates/wasm-package-manager/src/types/: models.rs  parser.rs  raw.rs  worlds.rs
crates/wasm-wit-doc/: Cargo.toml  README.md
crates/wasm-wit-doc/src/: convert.rs  lib.rs  types.rs
crates/wasm-wit-doc/tests/: parse.rs
crates/xtask/: Cargo.toml
docs/: README.md  architecture.md  authentication.md  configuration.md  github-action.md  usage.md
registry/: a-skua.toml  ba.toml  componentized.toml  engines.toml  fastertools.toml  fermyon.toml  greenticai.toml  mattilsynet.toml  mizchi.toml  twitchax.toml  wasi.toml  wasmcloud.toml  wasmcp.toml  yoshuawuyts.toml
spec/: credential.md  database.md  frontend.md  wasm-cli.md  wasm-meta-registry-client.md  wasm-package-manager.md
spec/cli/: install.md  local.md  progress-bar.md  run.md
spec/manifest/: lockfile.md
spec/oci/: layers.md
spec/registry/: client.md  server.md
(+33 files in other folders)
