# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/manifest",
    "crates/package-manager",
    "crates/wasm-detector",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0"
documentation = "https://github.com/yoshuawuyts/wasm"
repository = "https://github.com/yoshuawuyts/wasm"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Yosh Wuyts <cargo@yosh.is>", "Josh Duffney <josh@duffney.io>"]
categories = []
keywords = []

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"
nonstandard_style = { level = "deny", priority = -1 }
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
fallible_impl_from = "deny"
fn_params_excessive_bools = "deny"
indexing_slicing = "deny"
must_use_candidate = "deny"
unneeded_field_pattern = "deny"

[workspace.dependencies]

# local dependencies
wasm-manifest = { path = "crates/manifest", version = "0.1.0" }
wasm-package-manager = { path = "crates/package-manager", version = "0.1.0" }
wasm-detector = { path = "crates/wasm-detector", version = "0.1.0" }

# shared dependencies
anyhow = "1.0.100"
futures-concurrency = "7.7.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# OCI dependencies
docker_credential = "1.3.2"
oci-client = { version = "0.15", default-features = false, features = [
    "rustls-tls",
] }
oci-wasm = { version = "0.3.0", default-features = false, features = [
    "rustls-tls",
] }

# cli dependencies
bytesize = "2.3.1"
clap = { version = "4.5.54", features = ["derive", "string", "color"] }
comfy-table = "7.2.1"
indicatif = "0.17"
dirs = "6.0.0"
insta = "1.44.3"
serde_json = { version = "1.0.145", features = ["alloc"] }
termcolor = "1.4.1"
wasm-metadata = "0.244.0"
wasmtime = "41.0.1"
wasmtime-wasi = "41.0.1"
ratatui = "0.30.0"
crossterm = "0.29.0"

# store dependencies
cacache = { version = "13.1.0", features = [
    "futures",
    "libc",
    "link_to",
    "memmap2",
    "mmap",
    "tokio",
    "tokio-runtime",
    "tokio-stream",
], default-features = false }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = "1.0.228"
toml = "0.9"
wit-parser = "0.230"

# detector dependencies
ignore = "0.4.25"
tempfile = "3"
