# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "2"
members = [
    "crates/wasm-cli",
    "crates/wasm-cli-internal-run",
    "crates/wasm-frontend",
    "crates/wasm-manifest",
    "crates/wasm-meta-registry",
    "crates/wasm-meta-registry-client",
    "crates/wasm-meta-registry-types",
    "crates/wasm-package-manager",
    "crates/wasm-detector",
    "crates/wasm-tui",
    "crates/wasm-wit-doc",
    "crates/xtask",
]

[workspace.package]
version = "0.3.0"
documentation = "https://github.com/yoshuawuyts/wasm"
repository = "https://github.com/yoshuawuyts/wasm"
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Yosh Wuyts <cargo@yosh.is>", "Josh Duffney <josh@duffney.io>"]
categories = []
keywords = []

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"
nonstandard_style = { level = "deny", priority = -1 }
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
missing_doc_code_examples = "warn"

[workspace.lints.clippy]
# Lint groups (as baselines, priority -1 so individual overrides win)
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Individual lints — deny (hard errors even outside CI)
indexing_slicing = "deny"
fallible_impl_from = "deny"

# Individual lints — warn (fail in CI via -Dwarnings)
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
unneeded_field_pattern = "warn"

# Cherry-picked restriction lints
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
error_impl_error = "warn"
infinite_loop = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_self_imports = "warn"
verbose_file_reads = "warn"

# Pedantic overrides — allow (too noisy or conflicts with project style)
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
self_named_module_files = "allow"
multiple_crate_versions = "allow"
doc_markdown = "allow"
cargo_common_metadata = "allow"
str_to_string = "allow"

[workspace.dependencies]

# local dependencies
wasm-manifest = { path = "crates/wasm-manifest", version = "0.3.0" }
wasm-meta-registry = { path = "crates/wasm-meta-registry", version = "0.3.0" }
wasm-meta-registry-client = { path = "crates/wasm-meta-registry-client", version = "0.3.0", default-features = false }
wasm-meta-registry-types = { path = "crates/wasm-meta-registry-types", version = "0.3.0" }
wasm-package-manager = { path = "crates/wasm-package-manager", version = "0.3.0" }
wasm-cli-internal-run = { path = "crates/wasm-cli-internal-run", version = "0.3.0" }
wasm-detector = { path = "crates/wasm-detector", version = "0.3.0" }
wasm-tui = { path = "crates/wasm-tui", version = "0.3.0" }
wasm-wit-doc = { path = "crates/wasm-wit-doc", version = "0.3.0" }

# shared dependencies
anyhow = "1.0.100"
futures-concurrency = "7.7.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# OCI dependencies
docker_credential = "1.3.2"
oci-client = { version = "0.16", default-features = false, features = [
    "rustls-tls",
] }
oci-wasm = { version = "0.4.0", default-features = false, features = [
    "rustls-tls",
] }

# cli dependencies
dotenvy = "0.15.7"
miette = { version = "7.6.0" }
bytesize = "2.3.1"
clap = { version = "4.5.54", features = ["derive", "string", "color"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
    "tracing",
] }
clap_complete = "4.5.66"
clap_mangen = "0.3.0"
comfy-table = "7.2.1"
console = "0.16"
indicatif = "0.18"
dirs = "6.0.0"
insta = "1.44.3"
serde_json = { version = "1.0.145", features = ["alloc"] }
termcolor = "1.4.1"
wasm-metadata = "0.246.1"
wasmtime = "43.0.0"
wasmtime-wasi = "43.0.0"
wasmtime-wasi-http = "43.0.0"
hyper = { version = "1", features = ["http1", "server"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

# store dependencies
cacache = { version = "13.1.0", features = [
    "futures",
    "libc",
    "link_to",
    "memmap2",
    "mmap",
    "tokio",
    "tokio-runtime",
    "tokio-stream",
], default-features = false }
pubgrub = "0.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0"
wasmparser = "0.246"
wit-component = "0.246"
wit-parser = "0.246"

# frontend dependencies
html = "0.6"
wstd = "0.6"
wstd-axum = "0.6"

# server dependencies
axum = "0.8.8"
exponential-backoff = "2.1.0"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "gzip",
] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# composition dependencies
wac-parser = "0.9.0"
wac-graph = "0.9.0"
wac-resolver = "0.9.0"
wac-types = "0.9.0"

# detector dependencies
ignore = "0.4.25"
tempfile = "3"
