[package]
name = "wasm"
description = "Unified WebAssembly developer tools"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[lib]
name = "wasm"
path = "src/lib.rs"

[[bin]]
name = "wasm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
futures-concurrency = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-detector = { workspace = true }
wasm-manifest = { workspace = true }
wasm-metadata = { workspace = true }
wasm-package-manager = { workspace = true, features = ["http-sync"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
wasm-detector = { workspace = true, features = ["test-helpers"] }
wasm-package-manager = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
