[package]
name = "wasm"
description = "Unified WebAssembly developer tools"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[lib]
name = "wasm"
path = "src/lib.rs"

[[bin]]
name = "wasm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
futures-concurrency = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
ratatui = { workspace = true }
serde_json = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true, features = ["net"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-detector = { workspace = true }
wasm-manifest = { workspace = true }
wasm-metadata = { workspace = true }
wasm-package-manager = { workspace = true, features = ["http-sync"] }
wasmparser = { workspace = true }
wac-parser = { workspace = true }
wac-graph = { workspace = true }
wac-resolver = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
hyper = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
oci-client = { workspace = true }
tempfile = { workspace = true }
wasm-detector = { workspace = true }
wasm-encoder = "0.245"
wasm-package-manager = { workspace = true }

[lints]
workspace = true
