[package]
name = "wasm-package-manager"
description = "A stateful library to interact with OCI registries storing WebAssembly Components"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = []
# Enable test helpers for use in other crates' tests
test-helpers = []
# serde is always enabled (kept as a no-op feature for backward compatibility)
serde = []
# Enable HTTP sync from meta-registry
http-sync = ["dep:reqwest", "dep:exponential-backoff", "serde"]

[dependencies]
anyhow = { workspace = true }
cacache = { workspace = true }
dirs = { workspace = true }
docker_credential = { workspace = true }
exponential-backoff = { workspace = true, optional = true }
futures-concurrency = { workspace = true }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
wasmparser = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
