[package]
name = "wasm-package-manager"
description = "A stateful library to interact with OCI registries storing WebAssembly Components"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = []
# serde is always enabled (kept as a no-op feature for backward compatibility)
serde = []
# Enable HTTP sync from meta-registry
http-sync = ["wasm-meta-registry-client/client", "serde"]

[dependencies]
anyhow = { workspace = true }
cacache = { workspace = true }
miette = { workspace = true }
dirs = { workspace = true }
docker_credential = { workspace = true }
futures-concurrency = { workspace = true }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
wasm-manifest = { workspace = true }
wasm-meta-registry-client = { workspace = true }
wasmparser = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
