[package]
name = "wasm-wit-doc"
description = "Parse WIT text into a rich, serializable document model for documentation rendering"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
wit-parser = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
